Successfully Connect with Firebase

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   desktop_window: ^0.4.0
+  firebase_core: ^1.11.0
   flutter:
     sdk: flutter
   flutter_svg: ^0.23.0+1
@@ -36,11 +37,6 @@ dependencies:
   provider: ^6.0.1
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^1.0.0
   flutter_native_splash: ^1.2.4
   flutter_test:
